--- a/index.html
+++ b/index.html
@@ -171,7 +171,9 @@
   }
 
   function onRegister(shiftId) {
-    if (!isRegistrationOpen() && !sessionStorage.getItem('isAdmin')) {
+    // ✅ Cho phép ngoài giờ nếu admin bật "Mở đăng ký ngoài giờ"
+    const manualOpen = localStorage.getItem("manualOpen") === "true";
+    if (!isRegistrationOpen() && !sessionStorage.getItem('isAdmin') && !manualOpen) {
       alert("🔒 Ngoài giờ đăng ký (chỉ mở 19:50 Thứ 6 → 21:00 Thứ 7)");
       return;
     }
@@ -243,7 +245,8 @@
   }
 
   function updateButtonStates() {
-    const isOpen = isRegistrationOpen() || sessionStorage.getItem('isAdmin');
+    const manualOpen = localStorage.getItem("manualOpen") === "true";
+    const isOpen = isRegistrationOpen() || sessionStorage.getItem('isAdmin') || manualOpen;
     const buttons = document.querySelectorAll(".btn");
     buttons.forEach(btn => {
       if (["adminBtn","resetBtn","logoutBtn"].includes(btn.id)) return;
@@ -265,7 +268,7 @@
   setInterval(updateButtonStates, 60000);
 </script>
 
-<!-- === NÚT RESET BIỆT DANH MỘT LẦN CHO ADMIN === -->
+<!-- === NÚT RESET BIỆT DANH MỘT LẦN + MỞ NGOÀI GIỜ + LỊCH SỬ === -->
 <script>
 (function () {
   const resetNickRef = db.ref("reset_nickname_once");
@@ -301,17 +304,8 @@
     });
   };
 
-  window.addEventListener("storage", () => {
-    if (!sessionStorage.getItem("isAdmin")) resetNickBtn.style.display = "none";
-  });
-})();
-</script>
-
-<!-- === NÚT MỞ ĐĂNG KÝ NGOÀI GIỜ + LỊCH SỬ ADMIN === -->
-<script>
-(function () {
+  // === NÚT MỞ NGOÀI GIỜ + XEM LỊCH SỬ ===
   let manualOpen = false;
-
   const toggleBtn = document.createElement("button");
   toggleBtn.textContent = "🔓 Mở đăng ký ngoài giờ (Admin)";
   toggleBtn.className = "btn";
@@ -322,9 +316,8 @@
 
   toggleBtn.onclick = () => {
     manualOpen = !manualOpen;
-    toggleBtn.textContent = manualOpen
-      ? "🔒 Đóng đăng ký ngoài giờ"
-      : "🔓 Mở đăng ký ngoài giờ (Admin)";
+    localStorage.setItem("manualOpen", manualOpen ? "true" : "false");
+    toggleBtn.textContent = manualOpen ? "🔒 Đóng đăng ký ngoài giờ" : "🔓 Mở đăng ký ngoài giờ (Admin)";
     updateButtonStates();
   };
 
@@ -346,49 +339,32 @@
     if (sessionStorage.getItem("isAdmin")) {
       toggleBtn.style.display = "inline-block";
       historyBtn.style.display = "inline-block";
-      logAdminLogin();
+      resetNickBtn.style.display = "inline-block";
     } else {
       toggleBtn.style.display = "none";
       historyBtn.style.display = "none";
+      resetNickBtn.style.display = "none";
     }
   });
 
   if (sessionStorage.getItem("isAdmin")) {
     toggleBtn.style.display = "inline-block";
     historyBtn.style.display = "inline-block";
+    resetNickBtn.style.display = "inline-block";
+    logAdminLogin();
   }
 
   historyBtn.onclick = () => {
     adminLogRef.once("value").then(snap => {
       const logs = snap.val();
-      if (!logs) return alert("Chưa có lịch sử đăng nhập nào.");
-      let text = "📜 Lịch sử đăng nhập Admin:\n\n";
+      if (!logs) return alert("Không có lịch sử.");
+      let text = "🕓 Lịch sử đăng nhập Admin:\n\n";
       Object.values(logs).forEach(l => text += `• ${l.time} — ${l.user}\n`);
       alert(text);
     });
   };
-
-  const originalUpdate = updateButtonStates;
-  updateButtonStates = function () {
-    const isOpen = isRegistrationOpen() || sessionStorage.getItem("isAdmin") || manualOpen;
-    const buttons = document.querySelectorAll(".btn");
-    buttons.forEach(btn => {
-      if (["adminBtn","resetBtn","logoutBtn"].includes(btn.id)) return;
-      btn.disabled = !isOpen;
-      btn.style.opacity = isOpen ? "1" : "0.45";
-      btn.title = isOpen ? "" : "Ngoài giờ đăng ký";
-    });
-    if (isOpen) {
-      statusBanner.style.background = "rgba(16,185,129,0.15)";
-      statusBanner.style.color = "#10b981";
-      statusBanner.textContent = "🟢 Đang trong thời gian đăng ký";
-    } else {
-      statusBanner.style.background = "rgba(239,68,68,0.15)";
-      statusBanner.style.color = "#ef4444";
-      statusBanner.textContent = "🔒 Ngoài giờ đăng ký (sẽ mở 19:50 Thứ 6)";
-    }
-  };
 })();
 </script>
+
 </body>
 </html>
